// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckPoints can't update checkpoint if it's an automatic checkpoint 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            disabled={true}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            customColor="#FF6C60"
            disabled={true}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly during folder loading 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            disabled={true}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            customColor="#FCB322"
            disabled={true}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly when locked 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            disabled={true}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            customColor="#FF6C60"
            disabled={true}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly with checkpoint no traited 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            disabled={false}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            customColor="#FCB322"
            disabled={false}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly with checkpoint sending 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            disabled={true}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            customColor="#FCB322"
            disabled={true}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly with checkpoint valid 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            disabled={false}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            customColor="#FCB322"
            disabled={false}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CheckPoints render correctly with default checkpoint 1`] = `
<div
  className="CheckPoints-CheckPoint-Container"
>
  <table
    className="CheckPoints-Table"
  >
    <thead>
      <tr>
        <th>
          Oui
        </th>
        <th>
          Non
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={false}
            disabled={false}
            id="0_yes"
            name="0"
            onChange={[Function]}
            value="yes"
          />
        </td>
        <td
          className="CheckPoints-Table-Center"
        >
          <Radio
            checked={true}
            customColor="#FF6C60"
            disabled={false}
            id="0_no"
            name="0"
            onChange={[Function]}
            value="no"
          />
        </td>
        <td>
          <label
            className="CheckPoints-CheckPoint-Label"
            htmlFor="{value.id_controle}"
          >
            Checkpoint test
          </label>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
